# Summer-Code-Jam-2024

./: .env.sample  .gitignore  Dockerfile  logging.conf  main.py  pyproject.toml
cogs/: database.py  fact.py  misc.py  quiz.py
repositories/: quiz_repo.py  wiki_repo.py
utils/: database.py  gemini.py  leaderboard.py  quiz.py  wiki.py
